--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The History of Soft Pretzels</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/style.css">
 
 </head>
 <body>
-    <h1>
-        I'm Cold
-    </h1>
+<div class="hero">
+    
+</div>
+
+    <h1>I'm Cold</h1>
+    <img src="images/Cinnamon-Sugar-Soft-Pretzels-1.jpeg" alt="Cinnamon Pretzel">
 
 </body>
 </html>
