--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
             </section>
             
             <section class="card" data-aos="fade-right">
-
+<script src="script.js"></script>
 </body>
 </html>
