starting OG section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
               </div>
             </section>
             
-            <section class="card" data-aos="fade-right">
-<script src="script.js"></script>
-</body>
-</html>
+          
+
+<h1> The OGs</h1>
