--- a/index.html
+++ b/index.html
@@ -168,3 +168,33 @@
           
 
 <h1> The OGs</h1>
+
+<div class="container">
+
+  <div class="overlay-container">
+    <img src="images/PPF.png" />
+    <div class="overlay overlay-left">
+      <div class="text">
+        Dan DiZio, grew up eating pretzels. He started selling soft pretzels in his neighborhood at age eleven, becoming a child entrepreneur with a sales team of kids from all around the town. He missed pretzels when he went away to school, so after graduation Dan partnered with his college buddy Len Lehman to found the original Philly Pretzel Factory location in the Mayfair section of Philadelphia.
+      </div>
+    </div>
+  </div>
+ <div class="overlay-container">
+  <img src="images/AuntieAnne's.png" />
+    <div class="overlay overlay-right">
+      <div class="text">
+        Auntie Anne's got its start in 1988 when Anne Beiler bought a stand in a Pennsylvania farmer's market. After some experimentation, 
+        "Auntie" Anne created a masterpiece — the same freshly baked goodness you know  
+        and love today.
+    </div>
+  </div>
+<div class="overlay-container">
+  <img src="images/SuperPretzel logo.png" />
+    <div class="overlay overlay-top">
+      <div class="text">
+        It’s time to set the record straight: with SUPERPRETZEL Soft Pretzels, snack time is anytime. Warm, delicious and ready in seconds, they’re the snack you can savor on any schedule. The brand was invented by Gerry Shreiber in 1971 when he took over a bankrupt pretzel business for $72,000 that was called J&J Soft Pretzel. The brand “SuperPretzel” was officially trademarked in 1973 by JJSF.
+      </div>
+    </div>
+  </div>
+
+
